--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "expo-font": "*"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
+    "string.fromcodepoint": "^0.2.1",
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "@types/react-native": "~0.57",
