--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "build/Icons.js",
   "types": "build/Icons.d.ts",
   "scripts": {
-    "copy-vendor": "cp -R src/vendor/ build/vendor/",
+    "copy-vendor": "cp -R src/vendor/ build/vendor/ && cp src/*.js build/",
     "generate-lazy": "expo-module babel --config-file ./babel.config.build.js --source-maps --out-file build/IconsLazy.js build/Icons.js",
     "build": "EXPO_NONINTERACTIVE=1 expo-module build && npm run generate-lazy && npm run copy-vendor",
     "build:dev": "expo-module build",
